# beaver

./: .copier-answers.yaml  .dockerignore  .gitignore  404.html  CONTRIBUTING.md  Dockerfile  README.md  Taskfile.dist.yaml  docker-compose.yaml  entrypoint.sh  environment.yaml  flake.nix  index.html  pyproject.toml
.github/workflows/: docs.yaml  docs.yml  draft.yaml  draft.yml  lint.yaml  migrations.yaml  migrations.yml  registry.yaml  registry.yml  test-docker.yaml  test-docker.yml
.trunk/: trunk.yaml
.trunk/configs/: ruff.toml
docs/: docusaurus.config.mts
docs/docs/: 01-Index.md  02-Usage.md  03-Configuration.md
emishows/: README.md  pyproject.toml
emishows/src/emishows/: __main__.py  asgi.py  config.py  settings.py
emishows/src/emishows/app/: models.py  serializers.py
emishows/src/emishows/app/migrations/: 0002_alter_event_type.py
emishows/src/emishows/config/: __init__.py  base.py  config.py  models.py
prisma/: partial_types.py  schema.prisma
prisma/migrations/0000_squashed/: migration.sql
prisma/migrations/20231204220142_initial/: migration.sql
prisma/migrations/20240811201303_initial/: migration.sql
prisma/migrations/20250706203830_initial/: migration.sql
src/beaver/: __main__.py  server.py  state.py
src/beaver/api/: app.py  lifespans.py  openapi.py  validator.py
src/beaver/api/routes/: router.py
src/beaver/api/routes/events/: controller.py  errors.py  models.py  router.py  service.py
src/beaver/api/routes/instances/: controller.py  errors.py  models.py  router.py  service.py
src/beaver/api/routes/ping/: controller.py  models.py  router.py  service.py
src/beaver/api/routes/schedule/: controller.py  errors.py  models.py  router.py  service.py
src/beaver/api/routes/shows/: controller.py  errors.py  models.py  router.py  service.py
src/beaver/api/routes/sse/: controller.py  models.py  router.py  service.py
src/beaver/api/routes/test/: controller.py  models.py  router.py  service.py
src/beaver/config/: base.py  builder.py  models.py
src/beaver/models/events/: enums.py  event.py  events.py  fields.py  mevent.py  show.py  shows.py  test.py  types.py
src/beaver/services/data/howlite/: models.py  queries.py  service.py
src/beaver/services/data/sapphire/: errors.py
src/beaver/services/entities/events/: errors.py  models.py  service.py
src/beaver/services/entities/instances/: errors.py  models.py  service.py
src/beaver/services/entities/shows/: models.py  service.py
src/beaver/services/events/: models.py  service.py
src/beaver/services/howlite/: errors.py  models.py  queries.py  service.py
src/beaver/services/icalendar/: errors.py  expander.py  models.py  parser.py  service.py
src/beaver/services/instances/: models.py  service.py
src/beaver/services/mevents/: errors.py  models.py  service.py
src/beaver/services/ping/: models.py  service.py
src/beaver/services/sapphire/: __init__.py  migrator.py  service.py
src/beaver/services/shows/: errors.py  models.py  service.py
src/beaver/services/test/: models.py  service.py
src/beaver/utils/: time.py
src/emishows/: __main__.py  foo.py  server.py  state.py  time.py
src/emishows/api/: app.py  validator.py
src/emishows/api/routes/: router.py
src/emishows/api/routes/events/: controller.py  errors.py  models.py  router.py  service.py
src/emishows/api/routes/ping/: controller.py  models.py  router.py  service.py
src/emishows/api/routes/schedule/: controller.py  errors.py  models.py  router.py  service.py
src/emishows/api/routes/shows/: controller.py  errors.py  models.py  router.py  service.py
src/emishows/api/routes/sse/: controller.py  models.py  router.py  service.py
src/emishows/config/: base.py  builder.py  models.py
src/emishows/database/: migrator.py
src/emishows/datashows/: migrator.py
src/emishows/datatimes/: errors.py  queries.py  service.py
src/emishows/emitimes/: errors.py  models.py  queries.py  service.py
src/emishows/events/: errors.py  models.py  service.py
src/emishows/icalendar/: errors.py  expander.py  models.py  parser.py
src/emishows/models/: events.py
src/emishows/models/events/: event.py  mevent.py  show.py  types.py
src/emishows/services/datashows/: __init__.py  migrator.py  service.py
src/emishows/services/datatimes/: models.py  queries.py  service.py
src/emishows/services/events/: models.py  service.py
src/emishows/services/icalendar/: expander.py  models.py  parser.py  service.py
src/emishows/services/mevents/: errors.py  models.py  service.py
src/emishows/services/ping/: models.py  service.py
src/emishows/services/shows/: models.py  service.py
src/emishows/shows/: errors.py  models.py  service.py
tests/integration/: conftest.py
usage/: index.html
