[tool.poetry]
name = "emishows"
version = "0.4.0"
description = "emission shows 🎭"
authors = ["radio-aktywne <it@radioaktywne.pl>"]

[tool.poetry.dependencies]
python = "^3.12"
# Pydantic is used to define data models
pydantic = "^2.5"
pydantic-settings = "^2.1"
# OmegaConf is used to load configuration
omegaconf = "^2.3"
# Typer and Rich are used to build CLIs
typer = { version = "^0.9", extras = ["all"] }
rich = "^13.7"
# Litestar and Uvicorn are used to build async APIs
litestar = "^2.4"
uvicorn = { version = "^0.24", extras = ["standard"] }
# For correct handling of timezones
tzdata = "*"
# Database access
prisma = "^0.11"
# Helps building API clients
gracy = "^1.32"
# iCalendar handling
icalendar = "^5.0"
# Expanding iCalendar events
recurring-ical-events = "^2.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.4"
pytest-asyncio = "^0.23"
testcontainers = "^3.7"

[tool.prisma]
binary_cache_dir = "prisma/bin"

[tool.poetry.scripts]
# Register CLI
emishows = "emishows.__main__:cli"

# See: https://python-poetry.org/docs/pyproject/#poetry-and-pep-517
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
