[tool.poetry]
name = "emishows"
version = "0.5.2"
description = "Emission shows 🎭"
authors = ["radio-aktywne <it@radioaktywne.pl>"]

[tool.poetry.dependencies]
python = "^3.11"
# Pydantic is used to define data models
pydantic = "^2.6"
pydantic-settings = "^2.2"
# OmegaConf is used to load configuration
omegaconf = "^2.3"
# Typer and Rich are used to build CLIs
typer = { version = "^0.9", extras = ["all"] }
rich = "^13.7"
# Litestar and Uvicorn are used to build async APIs
litestar = "^2.6"
uvicorn = { version = "^0.28", extras = ["standard"] }
# For correct handling of timezones
tzdata = "*"
# Database access
prisma = "^0.12"
# Helps building API clients
gracy = "^1.33"
# iCalendar handling
icalendar = "^5.0"
# Expanding iCalendar events
recurring-ical-events = "^2.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.1"
# Asyncio support for pytest
pytest-asyncio = "^0.23"
# Running dependent services in containers
testcontainers = "^4.0"
# Async HTTP requests
httpx = "^0.27"

[tool.prisma]
# Store Prisma binaries in local directory
binary_cache_dir = "prisma/bin"

[tool.poetry.scripts]
# Register CLI
emishows = "emishows.__main__:cli"

# See: https://python-poetry.org/docs/pyproject/#poetry-and-pep-517
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
